styles/main.css
.jf-loading body {
  opacity: 0;
  visibility: hidden;
}

.jf-active *, .jf-inactive * {
  -webkit-transition: opacity 0.3s ease-out;
  -moz-transition: opacity 0.3s ease-out;
  -o-transition: opacity 0.3s ease-out;
  transition: opacity 0.3s ease-out;
}

.parallax-container {
  height: 80vh;
}

.responsive-img {
  object-fit: cover;
}

#home h1 {
  position: relative;
  left: 8%;
  font-size: 5.6rem;
  text-shadow: 4px 4px 8px black;
}

.section.title {
  height: 20vh;
}

.slogan-text {
  font-size: 2rem;
}

.fullpage {
  position: relative;
  height: 100vh;
  text-shadow: 2px 2px 5px black;
  box-shadow: inset 0 0 100px #000;
  background-size: cover;
  background-repeat: no-repeat;
}

@media screen and (min-width: 601px) and (min-height: 401px) {
  .fullpage .row {
    margin-top: 10vh;
  }
}

.fullpage .col {
  margin: 1rem;
  padding: 1rem;
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 1rem;
}

.fullpage#zakka {
  background-image: url(/images/YIH_3124.jpg);
}

.fullpage#flower {
  background-image: url(/images/YIH_3134.jpg);
}

.fullpage#affiliates {
  background-image: url(/images/YIH_3174.jpg);
}

.fullpage .header {
  color: white;
}

.fullpage .flow-text {
  color: #ddd;
  text-align: justify;
}

.divider {
  background-color: darkgrey;  
}

address {
  font-style: normal;
}

.social-icon {
  color: lightgray;
  border-radius: 10px;
}

.typed-cursor {
  opacity: 1;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite;
}

@keyframes blink {
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}

@-webkit-keyframes blink {
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}

@-moz-keyframes blink {
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}

